--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html lang="en">
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
   <title>Great Idea - Responsive I</title>
 
@@ -11,6 +12,74 @@
 </head>
 
 <body>
-<!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
+  <header>
+    <nav>
+      <a id="topNav" href="#serv">Services</a>
+      <a href="#prod">Product</a>
+      <a href="#vis">Vision</a>
+      <a href="#feat">Features</a>
+      <a href="#about">About</a>
+      <a href="#cont">Contact</a>
+    </nav>
+  
+    <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+  </header>
+  
+  <section class="banner">
+    <div id="iod">
+        <h1>Innovation</h1>
+        <h1>On</h1>
+        <h1>Demand</h1>
+        <a href="#feat">Get Started</a>
+      </div>
+    <img id="snip" src="img/header-img.png" alt="Image of a code snippet."> 
+  </section>
+  
+  
+  
+  
+  <section class="mid">
+    <div class="mid1">
+      <div id="feat">
+        <h2>Features</h2>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </div>
+  
+      <div id="about">
+        <h2>About</h2>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </div>
+    </div> 
+  
+    <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+    <div class="mid2">
+      <div id="serv">
+        <h2>Services</h2>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </div>
+    
+      <div id="prod">
+        <h2>Product</h2>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </div>
+    
+      <div id="vis">
+        <h2>Vision</h2>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </div>
+    </div>
+  </section>
+  
+  <footer>
+    <div id="cont">
+    <h2>Contact</h2>
+      <p>123 Way 456 Street</p>
+      <p>Somewhere, USA</p>
+    <p>1 (888) 888-8888</p>
+    <p>sales@greatidea.io</p>
+    </div>
+  
+    <p class="copyright">Copyright Great Idea! 2018</p> 
+  </footer>
 </body>
 </html>
